tests/check/launch_bounds_type.co
// RUN: not choreo %target %s 2>&1 | FileCheck %s
// CHECK: error: {{\[\[}}launch_bounds]] argument must be an integer but got 'f64'.
// CHECK: Totally 1 errors have been detected.

__co__ void bad_type() {
  [[launch_bounds(1.5)]]
  parallel by 1 : block {
  }
}

int main() { return 0; }
